<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/FragmentInicio">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_gravity="center"
                android:gravity="top"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/HomeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:fontFamily="@font/abel"
                    android:text="@string/Opciones"
                    android:textColor="@color/black"
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="25dp"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="70dp"
                    android:transitionName="textTransicion"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnHorariosRecolector_Inicio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/btn_inicio_1"
                    android:text="@string/Horarios_del_Recolector"
                    android:fontFamily="@font/abel"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"/>

                <!--
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnAvisosYNoticias_Inicio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/btn_inicio_2"
                    android:text="@string/Avisos_y_Noticias"
                    android:textColor="@color/white" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnInformacion_Inicio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/btn_inicio_1"
                    android:text="@string/Informacion"
                    android:textColor="@color/white" />
                !-->
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnReclamos_Inicio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/btn_inicio_2"
                    android:text="@string/Reclamos"
                    android:fontFamily="@font/abel"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnDenunciaDelitoAmbiental_Inicio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/btn_inicio_1"
                    android:text="@string/Denuncia_delito_Ambiental"
                    android:fontFamily="@font/abel"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="50dp">

                <androidx.cardview.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_view"
                    android:layout_gravity="center"
                    android:layout_width="350dp"
                    android:layout_height="match_parent"
                    card_view:cardCornerRadius="4dp"
                    android:layout_margin="10dp"
                    android:elevation="80dp">

                    <TextView
                        android:id="@+id/tvEtiquetaDesechar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Multa"
                        android:textColor="@color/textDesechar"
                        android:textStyle="bold"
                        android:fontFamily="@font/abel"
                        android:gravity="top"
                        android:textSize="25dp"
                        android:layout_marginLeft="200dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        />
                    <LinearLayout
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:layout_marginTop="30dp"
                        android:layout_marginLeft="150dp">

                        <LinearLayout
                            android:layout_width="180dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:gravity="left"
                            android:orientation="vertical">
                            <TextView
                                android:id="@+id/tvDescripcion"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/DescripcionCard"
                                android:gravity="top"
                                android:textSize="15dp"
                                android:justificationMode="none"
                                android:layout_marginLeft="10dp"
                                android:layout_marginBottom="5dp"
                                android:layout_marginRight="10dp"
                                />
                        </LinearLayout>



                    </LinearLayout>
                    <ImageView
                        android:id="@+id/imgDetalleDesechar"
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        app:srcCompat="@drawable/multas"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="5dp"/>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <!--
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnRegresar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_nav_forma"
                    android:gravity="center"
                    android:text="Regresar"
                    android:textSize="16sp"
                    android:textColor="@color/white"/>
            </LinearLayout>
            !-->

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>